<resources>
    <string name="app_name">Front Office</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="setting">Konfigurasi</string>
    <string name="operational">Operasional</string>
    <string name="status">Status</string>
    <string name="history">Riwayat</string>
    <string name="fnb"><![CDATA[F&B]]></string>
    <string name="profile">Profile</string>
</resources>