<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_operational"
        android:icon="@drawable/ic_operational"
        android:title="@string/operational" />

    <item
        android:id="@+id/navigation_status"
        android:icon="@drawable/ic_sing"
        android:title="@string/status" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_history"
        android:title="@string/history" />

    <item
        android:id="@+id/navigation_fnb"
        android:icon="@drawable/ic_food"
        android:title="@string/fnb" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person"
        android:title="@string/profile" />
</menu>